--- a/sections/blog-posts-new.liquid
+++ b/sections/blog-posts-new.liquid
@@ -36,50 +36,66 @@
 
 {%- if section.settings.divider -%}<div class="section--divider">{%- endif -%}
 
-<div class="page-width bs_home_blog">
 
-  {%- if section.settings.title != blank -%}
-    <header class="section-header section-header--with-link">
-      <h2 class="section-header__title">
-        {{ section.settings.title | escape }}
-      </h2>      
-    </header>
-  {%- endif -%}
+<div class="page-width bs_home_blog {% if template contains 'collection' %}collection-article-wrapper{% endif %}
+            {% if collection.metafields.custom.left_image %}has-image{% endif %}">
+  {% if template contains 'collection' and collection.metafields.custom.left_image %}
+    <div class="image-wrapper">
+      <img src="{{ collection.metafields.custom.left_image | img_url: 'master' }}">
+    </div>  
+  {% endif %}
 
-  <div class="blog-layout">
-    <div class="blog-layout__main art_left">
-      <div class="new-grid">
-        
-        {%- if article_1 != '' -%}          
-            {%- render 'article-grid-item',
-              blog: '',
-              article: article_1,
-              style: 'large',
-              show_tags: section.settings.blog_show_tags,
-              show_date: section.settings.blog_show_date,
-              show_comments: section.settings.blog_show_comments,
-              show_author: section.settings.blog_show_author,
-              image_size: section.settings.blog_image_size -%}
-        {%- endif -%}
+  {% if template contains 'collection' and collection.metafields.custom.left_image %}
+    <div class="article-content-wrapper">
+  {% endif %}
+    {%- if section.settings.title != blank -%}
+      <header class="section-header section-header--with-link">
+        <h2 class="section-header__title">
+          {{ section.settings.title | escape }}
+        </h2>
+        <h4 class="section-header__subtitle">
+          {{ section.settings.subtitle | escape }}
+        </h4>      
+      </header>
+    {%- endif -%}
+
+    <div class="blog-layout">
+      <div class="blog-layout__main art_left">
+        <div class="new-grid">
+          
+          {%- if article_1 != '' -%}          
+              {%- render 'article-grid-item',
+                blog: '',
+                article: article_1,
+                style: 'large',
+                show_tags: section.settings.blog_show_tags,
+                show_date: section.settings.blog_show_date,
+                show_comments: section.settings.blog_show_comments,
+                show_author: section.settings.blog_show_author,
+                image_size: section.settings.blog_image_size -%}
+          {%- endif -%}
+        </div>
+      </div>
+      <div class="blog-layout__main art_right">
+        <div class="new-grid">
+          
+          {%- if article_2 != '' -%}          
+              {%- render 'article-grid-item',
+                blog: '',
+                article: article_2,
+                style: 'large',
+                show_tags: section.settings.blog_show_tags,
+                show_date: section.settings.blog_show_date,
+                show_comments: section.settings.blog_show_comments,
+                show_author: section.settings.blog_show_author,
+                image_size: section.settings.blog_image_size -%}
+          {%- endif -%}
+        </div>
       </div>
     </div>
-    <div class="blog-layout__main art_right">
-      <div class="new-grid">
-        
-        {%- if article_2 != '' -%}          
-            {%- render 'article-grid-item',
-              blog: '',
-              article: article_2,
-              style: 'large',
-              show_tags: section.settings.blog_show_tags,
-              show_date: section.settings.blog_show_date,
-              show_comments: section.settings.blog_show_comments,
-              show_author: section.settings.blog_show_author,
-              image_size: section.settings.blog_image_size -%}
-        {%- endif -%}
-      </div>
+  {% if template contains 'collection' and collection.metafields.custom.left_image %}
     </div>
-  </div>
+  {% endif %}
 </div>
 
 {%- if section.settings.divider -%}</div>{%- endif -%}
@@ -93,6 +109,12 @@
       "type": "text",
       "id": "title",
       "label": "t:sections.blog-posts.settings.title.label",
+      "default": "From the blog"
+    },
+    {
+      "type": "text",
+      "id": "subtitle",
+      "label": "Subtitle",
       "default": "From the blog"
     },
     {
